istio-full/rollout.yaml
# --- Rollout: App A ---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: app-a
  namespace: demo-mesh
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
        - name: app-a
          image: argoproj/rollouts-demo:blue
          ports:
            - containerPort: 8080
  strategy:
    canary:
      stableService: app-a-stable
      canaryService: app-a-canary
      trafficRouting:
        istio:
          virtualService:
            name: app-a-vs
            routes:
              - primary
      steps:
      - setWeight: 5
      - pause:
          duration: 10m

---
# --- Services for App A ---
apiVersion: v1
kind: Service
metadata:
  name: app-a-stable
  namespace: demo-mesh
spec:
  selector:
    app: app-a
  ports:
    - port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: app-a-canary
  namespace: demo-mesh
spec:
  selector:
    app: app-a
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-a
  namespace: demo-mesh
spec:
  selector:
    app: app-a
  ports:
    - port: 80
      targetPort: 8080
---
# --- Istio for App A ---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-a-vs
  namespace: demo-mesh
spec:
  gateways:
  - istio-rollout-gateway
  hosts:
  - app-a.demo-mesh.svc.cluster.local
  http:
  - name: primary        # referenced in canary.trafficRouting.istio.virtualService.routes
    route:
    - destination:
        host: app-a-stable # referenced in canary.stableService
      weight: 100
    - destination:
        host: app-a-canary # referenced in canary.canaryService
      weight: 0

---
# apiVersion: networking.istio.io/v1beta1
# kind: DestinationRule
# metadata:
#   name: app-a-dr
#   namespace: demo-mesh
# spec:
#   host: app-a.demo-mesh.svc.cluster.local
#   subsets:
#     - name: stable
#       labels:
#         version: stable
#     - name: canary
#       labels:
#         version: canary
